--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <h3 class="user-transactions-title">🧾 My NFT Collection</h3>
 
                 <div class="purchase-history-toggle">
-                    <button class="purchase-history-btn active" data-type="bought">Bought</button>
+<!--                    <button class="purchase-history-btn active" data-type="bought">Bought</button>-->
 <!--                    <button class="purchase-history-btn" data-type="rent">Rent</button>-->
                 </div>
 
