--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             <img src="content/logo.png" alt="Logo" class="logo-image">
         </div>
         <h2>🔥 Welcome</h2>
-        <p class="desc">Track your journey in the NFTropolis world. Keep an eye on your progress and discover the
-            rewards
-            awaiting you as you level up.</p>
+        <p class="desc">💱 NFT FINAL FLIP
+            Track how many NFTs need to be sold before ALL FLIPS are activated simultaneously!.</p>
 
         <div class="card" id="level-summary-card">
             <h3>Level Progress</h3>
@@ -52,7 +51,7 @@
 
         <div class="liquidity-card">
             <p class="liquidity-text">
-                Liquidity:  <span class="nft-balance" id="nft-balance">loading...</span>
+                NFTs Left Until Flip:  <span class="nft-balance" id="nft-balance">loading...</span>
             </p>
 
             <div class="liquidity-bar">
