--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <img src="content/logo.png" alt="Logo" class="logo-image">
         </div>
         <h2>🔥 Welcome</h2>
-        <p class="desc">💱 NFT FINAL FLIP
+        <p class="desc">💱 NFT FINAL FLIP <br/>
             Track how many NFTs need to be sold before ALL FLIPS are activated simultaneously!.</p>
 
         <div class="card" id="level-summary-card">
