--- a/index.html
+++ b/index.html
@@ -261,6 +261,12 @@
             </span>
         </div>
 
+        <div class="quantity-controls">
+            <button class="qty-btn decrement" id="nft-qty-decrement">−</button>
+            <span id="nft-qty-value">1</span>
+            <button class="qty-btn increment" id="nft-qty-increment">+</button>
+        </div>
+
         <button class="add-to-cart-button">Add to Cart</button>
     </div>
 </div>
