--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
             <div class="balance-section">
                 <span class="balance-label">Account Balance</span>
                 <div class="balance-row">
-                    <span class="balance-amount">0</span>
+                    <span class="balance-amount" id="nft-balance-amount">0</span>
                     <img src="content/money-icon.png" alt="Main" class="price-icon" />
                     <span class="separator">/</span>
-                    <span class="balance-amount">0</span>
+                    <span class="balance-amount" id="extra-balance-amount">0</span>
                     <img src="content/nft_extra.png" alt="Bonus" class="price-icon" />
                 </div>
                 <div class="account-buttons">
