--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <span id="limited-nft-price" class="limited-nft-price"></span>
         </div>
 
-        <div class="limited-quantity-controls">
+        <div class="limited-quantity-controls" id="limited-quantity-controls">
             <button class="limited-qty-btn" id="limited-nft-qty-decrement">−</button>
             <span id="limited-nft-qty-value">1</span>
             <button class="limited-qty-btn" id="limited-nft-qty-increment">+</button>
